--- a/src/styles/themes/_dark.scss
+++ b/src/styles/themes/_dark.scss
@@ -39,7 +39,7 @@
                 button {
                     &.projects {
 
-                        background-color: brown;
+                          background-color: blueviolet;
                     }
 
                     &:hover {
