--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -9,7 +9,7 @@
           alt="Site Logo"
         />
         <span class="introduction-text"
-          >Hi, I'm <strong>Yingi</strong>. Welcome to my Angular portfolio! In
+          > Hi, Welcome to my Angular portfolio! In
           this portfolio you will find a collection of my projects that showcase
           my skills.</span
         >
@@ -17,7 +17,7 @@
     </div>
 
     <div class="footer-item item-technology">
-      <div class="footer-item-title">skills set</div>
+      <div class="footer-item-title">Key skills set</div>
       <div class="items-wrapper">
         <ul class="tech-list">
           <li>Responsive UI Design</li>
