--- a/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
+++ b/src/app/layout/page-introduction/page-introduction/page-introduction.component.html
@@ -1,25 +1,30 @@
 <div id="page-instroduction" class="page-instroduction">
-
-  <div
-    class="current-weather-container" *ngIf="isPositionAvailable">
-    <div class="weather-icon">
-      <img
-        [src]="'http://openweathermap.org/img/wn/' + weatherIcon"
-        alt="Icon"
-        class="weather-icon-img"
-        [title]="weatherDescription | titlecase"
-      />
+  <div class="current-weather-container" *ngIf="isPositionAvailable">
+    <div class="weather-nfo">
+      <div class="weather-icon">
+        <img
+          [src]="'http://openweathermap.org/img/wn/' + weatherIcon"
+          alt="Icon"
+          class="weather-icon-img"
+          [title]="weatherDescription | titlecase"
+        />
+      </div>
+      <div class="weather-temp" title="Temp">{{ temperature }}°C</div>
     </div>
-    <div class="weather-temp" title="Temp">{{ temperature }}°C</div>
   </div>
 
-  <div class="current-weather-container" title="Current Weather" *ngIf="!isPositionAvailable">
-    <div class="weather-temp">{{ temperature }}°C</div>
+  <div
+    class="current-weather-container"
+    title="Current Weather"
+    *ngIf="!isPositionAvailable"
+  >
+    <div class="weather-nfo">
+      <div class="weather-temp zero-temp">{{ temperature }}°C</div>
+    </div>
   </div>
 
   <div class="call-to-acltion-container">
-    
-    <div *ngIf="hasChanges === true"  @staggerInFromLeft class="intro-text">
+    <div *ngIf="hasChanges === true" @staggerInFromLeft class="intro-text">
       <div class="animate-stagger page-title">{{ pageTitle }}</div>
       <div class="animate-stagger page-description">{{ pageDesc }}</div>
       <div class="animate-stagger page-intro-buttons">
@@ -42,15 +47,12 @@
       </div>
     </div>
 
-    <div  @animateZoomIn  class="intro-image">
+    <div @animateZoomIn class="intro-image">
       <img
-      
         class="project-img"
         src="./img/call-to-action/ui.png"
         alt="recent project"
       />
     </div>
-
   </div>
-
 </div>
