--- a/src/app/layout/footer/footer/footer.component.html
+++ b/src/app/layout/footer/footer/footer.component.html
@@ -1,16 +1,16 @@
 <div id="footer" class="footer">
   <div class="footer-top-section">
     <div class="footer-item item-introduction">
-      <div class="footer-item-title">developer</div>
+      <div class="footer-item-title">Introduction</div>
       <p>
-        <img
+        <!-- <img
           class="introduction-img"
           src="./img/developer/yingi.png"
           alt="Site Logo"
-        />
+        /> -->
         <span class="introduction-text"
-          > Hi, Welcome to my Angular portfolio! In
-          this portfolio you will find a collection of my projects that showcase
+          > Hi, I'm Yingi. Welcome to my Angular portfolio! In
+          this portfolio you will find a collection of my recent projects that showcase
           my skills.</span
         >
       </p>
