--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -13,20 +13,23 @@
         flex-direction: column;
         row-gap: 18px;
 
+        .developer-image-container {
+            .developer-image {
+                height: 150px;
+                border-radius: 50%;
+                background-color: $light-primary-bg-color;
+                cursor: pointer;
+            }
+        }
+
         .developer-name {
             font-size: $font-size-lg + 8px;
             font-weight: bold;
-            margin-bottom: -10px;
+            margin-bottom: 5px;
 
             .name {
                 color: $error-color;
             }
-        }
-
-        .developer-title {
-            text-transform: uppercase;
-            font-size: $font-size-md + 2px;
-            font-family: 50;
         }
 
         .quick-links {
@@ -34,7 +37,7 @@
             flex-direction: row;
             column-gap: 20px;
             justify-content: center;
-            margin: 0px 8% 8px;
+            margin: 0px 20% 8px;
             border-bottom: 0.1em solid rgb(#e5e5e5, 1);
             padding-bottom: 25px;
 
@@ -64,6 +67,27 @@
 
         }
 
+        .developer-title {
+            text-transform: capitalize;
+            font-size: $font-size-md + 2px;
+            margin: 0px 4% 8px;
+            border-bottom: 0.1em solid rgb(#e5e5e5, 1);
+            padding-bottom: 15px;
+
+            .titles-container {
+                display: flex;
+                flex-wrap: wrap;
+                flex-direction: row;
+                column-gap: 5px;
+                justify-content: center;
+
+                .title-item {
+                    // border: 0.1em solid rgb(#e5e5e5, 1);
+                    min-width: 140px;
+                }
+            }
+        }
+
         .developer-skills-container {
             display: flex;
             flex-direction: row;
@@ -75,7 +99,7 @@
             .developer-skill {
                 background-color: $light-secondery-bg-color;
                 padding: $spacing-xs $spacing-sm;
-                border-radius: $spacing-md;
+                border-radius: $spacing-sm;
                 text-align: left;
                 min-width: 156px;
                 cursor: pointer;
@@ -146,40 +170,6 @@
         }
     }
 
-    //Media queries for responsive design
-    @include respond-to("md") {
-
-        //features section
-        .intro-container {
-            .news-feed-container {
-                .news-container {
-                    .news {
-                        .news-img {
-                            height: 60px;
-                        }
-
-                        .news-headline {
-                            font-size: $font-size-xs - 1px;
-                        }
-
-                    }
-                }
-
-                .weather-container {
-                    .weather-item {
-                        padding: $spacing-xs;
-                        padding-right: $spacing-xs - 6px;
-                        font-size: $font-size-sm;
-
-                        &.title {
-                            display: none;
-                        }
-                    }
-                }
-            }
-        }
-    }
-
     @include respond-to("pro-sm") {
 
         //features section
@@ -189,23 +179,20 @@
         }
     }
 
-    @include respond-to("sm") {}
-
     @include respond-to("pre-sm") {
-
-        //features section
         .intro-container {
-            // padding: 0 5% 15px;
             padding: $spacing-lg $spacing-sm $spacing-md ;
             border-radius: $spacing-sm;
             box-shadow: $light-box-shadow;
 
-            .recent-project-container {
-                .recent-project-details {
-                    .project-details {
-                        .project-description {
-                            font-size: $font-size-sm;
-                        }
+            .developer-title {
+
+                .titles-container {
+                    column-gap: 8px;
+
+                    .title-item {
+                        // border: 0.1em solid rgb(#e5e5e5, 1);
+                        min-width: 80px;
                     }
                 }
             }
@@ -217,6 +204,13 @@
         //features section
         .intro-container {
             padding: $spacing-sm ;
+
+            .developer-image-container {
+                .developer-image {
+                    margin-top: 8px;
+                    height: 140px;
+                }
+            }
         }
     }
 
@@ -228,24 +222,27 @@
 
         //features section
         .intro-container {
-            margin-bottom: -15px;
+
 
             .developer-title {
-                margin: 0 10%;
+                margin: 0 5%;
             }
 
             .developer-intro {
-                background-color: rgb($light-secondery-bg-color, 0.5);
-                -webkit-backdrop-filter: blur(10px);
-                backdrop-filter: blur(10px);
-                padding: $spacing-md ;
+                padding: $spacing-xs $spacing-md ;
                 border-radius: $spacing-sm;
-                display: none;
+                // display: none;
 
                 .read {
                     cursor: pointer;
                     color: $error-color;
                     display: block;
+                    margin: -8px;
+
+                }
+
+                .quick-links {
+                    margin-top: 0;
                 }
 
                 .third-pargraph {
@@ -259,6 +256,7 @@
                 .intro-btn {
                     padding: 6px 15px;
                     max-width: 200px;
+                    margin-bottom: 10px;
 
                 }
             }
