Addied little markups

--- a/src/app/features/projects/pages/projects/projects.component.html
+++ b/src/app/features/projects/pages/projects/projects.component.html
@@ -120,7 +120,7 @@
     </div>
   </section>
 
-  <div @animateSlideInFromBottom class="page-content-intro-hr">more</div>
+  <div @animateSlideInFromBottom class="page-content-intro-hr">recent projects</div>
 
   <section 
     class="featured-projects container"
