--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -12,7 +12,7 @@
         display: flex;
         flex-direction: column;
         row-gap: 18px;
-
+        
         .developer-image-container {
             .developer-image {
                 height: 150px;
@@ -148,7 +148,7 @@
             justify-content: center;
 
             .intro-btn {
-                padding: 7px 25px;
+                padding: 8px 28px;
                 border: none;
                 border-radius: $spacing-xs;
                 color: $light-neutral-font-color;
@@ -222,8 +222,6 @@
 
         //features section
         .intro-container {
-
-
             .developer-title {
                 margin: 0 5%;
             }
@@ -231,7 +229,6 @@
             .developer-intro {
                 padding: $spacing-xs $spacing-md ;
                 border-radius: $spacing-sm;
-                // display: none;
 
                 .read {
                     cursor: pointer;
@@ -251,10 +248,9 @@
             }
 
             .intro-btn-container {
-                column-gap: 10px;
-
+                margin-top: -14px;
                 .intro-btn {
-                    padding: 6px 15px;
+                                        padding: 9px 15px;
                     max-width: 200px;
                     margin-bottom: 10px;
 
