--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -37,13 +37,7 @@
     <div class="developer-title">
       <div @animateFadeIn class="titles-container">
         <div class="title-item">
-          <i class="bi bi-award-fill"></i> front-end developer
-        </div>
-        <div class="title-item">
-          <i class="bi bi-award-fill"></i> UI Designer
-        </div>
-        <div class="title-item">
-          <i class="bi bi-award-fill"></i> Engineering
+          <i class="bi bi-award-fill"></i>  front-end developer (angular)
         </div>
         <div class="title-item">
           <i class="bi bi-award-fill"></i> B.Sc Hon. Computing (Cum Lauda)
