--- a/src/styles/pages/_about.scss
+++ b/src/styles/pages/_about.scss
@@ -1,5 +1,6 @@
 @use '../../styles/abstracts/variables' as *;
 @use '../../styles/abstracts/mixins' as *;
+
 #about-page-main {
     display: grid;
     grid-template-columns: 1fr;
@@ -13,6 +14,49 @@
         &::before,
         &::after {
             border-bottom: 1px solid #e5e5e5;
+        }
+    }
+
+    .cards-container {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr;
+        // column-gap: 30px;
+        justify-content: space-around;
+        padding: $spacing-md 0;
+
+        margin: 0px 10%;
+        border-bottom: 0.1em solid rgb(#e5e5e5, 1);
+
+        .card-container {
+            display: flex;
+            flex-direction: column;
+            row-gap: 18px;
+            padding: $spacing-sm;
+
+            .card-icon {
+
+                i {
+                    // font-size: $font-size-xxl;
+                    background-color: $light-secondery-bg-color;
+                    color: $error-color;
+                    font-size: 28px;
+                    cursor: pointer;
+                    padding: 16px 19px;
+                    border-radius: 50px;
+
+
+                    &:hover {
+                        box-shadow: $light-hover-box-shadow;
+                        background-color: $dark-primary-bg-color;
+                        color: $light-neutral-font-color;
+                    }
+                }
+            }
+
+            .card-title {
+                font-size: $font-size-md;
+                font-weight: bold
+            }
         }
     }
 
@@ -59,7 +103,33 @@
         }
     }
 
- 
+    @include respond-to("pro-xs") {
+        .cards-container {
+            padding: $spacing-sm - 2px 0;
+            margin: 0px 8%;
+
+            .card-container {
+
+                .card-icon {
+
+                    i {
+                        // font-size: $font-size-xxl;
+                        background-color: $light-secondery-bg-color;
+                        font-size: 18px;
+                        cursor: pointer;
+                        padding: 15px 19px;
+                        border-radius: 50px;
+                        // border: 0.1em solid rgb(#e5e5e5, 1);
+                    }
+                }
+
+                .card-title {
+                    font-size: $font-size-sm + 2px;
+                }
+            }
+        }
+    }
+
     @include respond-to("xs") {
         margin-bottom: -10px;
 
@@ -69,6 +139,30 @@
             &::before,
             &::after {
                 border-bottom: none
+            }
+        }
+
+        .cards-container {
+            // padding: 4px 0 8px;
+            margin: 0px 6%;
+
+            .card-container {
+                row-gap: 25px;
+                .card-icon {
+
+                    i {
+                        background-color: $light-secondery-bg-color;
+                        font-size: 20px;
+                        cursor: pointer;
+                        padding: 17px 20px;
+                        border-radius: 50px;
+                        // border: 0.1em solid rgb(#e5e5e5, 1);
+                    }
+                }
+
+                .card-title {
+                    font-size: $font-size-sm;
+                }
             }
         }
 
